Amended each element of the About Programme section to left align and reduced the height of the course timeline. I ensured that these changes were responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,10 @@ h1 {
 
 /* Navbar */
 .navbar {
-  padding-left: 40px;
+  padding-left: 20px;
   padding-right: 40px;
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 15px;
 }
 
 .nav-item a {
@@ -250,7 +250,7 @@ h1 {
 /*---------------------- Footer------------------ */
 
 .footer-item {
-  padding-top: 10px;
+  padding-top: 30px;
 }
 
 .social i {
@@ -265,6 +265,10 @@ h1 {
 
 .social li a i:hover {
   color: #e84610;
+}
+
+.social-links {
+    padding-top: 15px;
 }
 
 .overlay {
@@ -354,7 +358,7 @@ h1 {
 }
 
 .timeline-item {
-  padding: 6em 2em 1em 2em;
+  padding: 4.2em 2em 1em 2em;
   position: relative;
   color: #fafafa;
   border-left: 1px solid;
@@ -374,7 +378,7 @@ h1 {
   content: attr(data-days);
   position: absolute;
   left: 2.5em;
-  top: 5.1em;
+  top: 2.1em;
   display: block;
   font-weight: 500;
   font-size: 0.8em;
@@ -386,7 +390,7 @@ h1 {
   width: 12px;
   height: 12px;
   display: block;
-  top: 4.2em;
+  top: 2.0em;
   position: absolute;
   left: -6px;
   border-radius: 12px;
@@ -457,9 +461,13 @@ h1 {
   margin-bottom: 10px;
 }
 
+.about-prog-div {
+    padding-left: 40px;
+}
+
 .course-timetable {
-  padding-top: 30px;
-  background-color: #00887a;
+  padding-top: 40px;
+  background-color: #00887a;  
 }
 
 .contact-container {
